--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse justify-content-lg-around" id="navbarNav">
+              <div class="collapse navbar-collapse justify-content-center " id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link active text-white" aria-current="page" href="#">Qui sommes-nous?</a>
@@ -69,13 +69,193 @@
                     <a class="nav-link disabled text-white">Blog</a>
                   </li>
                   <li class="nav-item">
-                    <button class="btn btn-outline-success couleurrose" type="submit">Soutenez-nous maintenant</button>
+                    <button class="btn btn-outline-success couleurbout justify-content-lg-end text-white " type="submit">Soutenez-nous maintenant</button>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
+        <div class=" justify-content-center stparagraph">
+            <h2 class="text-white text-center">Lorem ipsum dolor sit amet, consectetur.  </h2>
+            <p class="text-white provide">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Metus pellentesque nascetur turpis mattis </br>
+                volutpat enim et ac. Posuere lacus, massa facilisi quis id laoreet scelerisque etiam. Velit dui, quis</br>
+                 consectetur pretium volutpat nibh sit bibendum.</p>
+         </div>
+    </section>
+    <section>
+        <div class="ndparagraph ">
+            <h3>GIRL BLOOD WORLD</h3>
+            <div class="bar1"></div>
 
+        </div>
+        <div class="container">
+            <div class="row margecarousel">
+                <div class="col-7">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="images/01-tuto-couture-serviette-hygienique-lavable.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/20191005_101806-1024x768.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Tampons-serviettes hygiéniques-danger-coupe-mentruelle-avoir-ses-règles-menstrues.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+
+                </div>
+                <div class="col-5 justif_txt">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique nulla rhoncus donec eget risus risus pretium. Lorem aliquam massa pellentesque nullam non libero, egestas ante. Vulputate euismod commodo sit nisl, urna orci. In porta tortor massa morbi. Accumsan congue ac leo, fames consectetur lacus, lorem. Magna convallis morbi convallis vivamus sed at. Eros, sagittis tincidunt molestie nec interdum. Aliquet tincidunt aenean nullam eget mattis sit. Morbi pellentesque turpis senectus id suspendisse senectus nam elementum. Nunc, at facilisis scelerisque neque id auctor nunc aliquam. Rhoncus, egestas pellentesque nunc mauris volutpat suspendisse. Quis pretium facilisi enim pellentesque.
+                            Condimentum vitae nibh faucibus mi in faucibus lorem sem nulla. Phasellus mi, consectetur dui massa turpis et aliquam egestas. Amet tellus dignissim nam felis. Id arcu eu neque commodo consectetur dolor. At aliquam nullam ultrices at. Pretium sed risus turpis nec purus.
+                            </p>
+                    </div>
+            </div>
+        </div>
+    </section>
+    <section class="couleurdefond">
+        <div class="rdparagraph ">
+            <h3>GIRL BLOOD WORLD A POUR</h3>
+            <div class="bar1"></div>
+        </div>
+        <div class="container">
+            <div class="row spacetopcard">
+                <div class="col margecard1">
+                    <div class="card" style="width: 15rem;">
+                        <div class="card-body">
+                          <img src="images/gg_eye.png" class="bi-eye mission " alt="...">
+ 
+                              <div class="bar2"></div>        
+                               <h5 class="card-titl fw-bold ">Vision</h5>
+                          <p class="card-text">La vision de GIRL Blood World est de faire en sorte que chaque femme et fille du monde jouissent de leurs droits sans aucune précarité sexuelle
+                        </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 15rem;">
+                        <div class="card-body">
+                            <img src="images/Vector (2).png" class="bi-eye mission " alt="...">
+                            <div class="bar2"></div>        
+                             <h5 class="card-titl fw-bold ">Mission</h5>
+                          <p class="card-text">Notre mission essentielle est de mettre fin aux inégalités liées à la question de menstruation.
+                        </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 15rem;">
+                        <div class="card-body">
+                            <img src="images/mdi-light_diamond.png" class="bi-eye mission " alt="...">
+                            <div class="bar2"></div>        
+                               <h5 class="card-titl fw-bold ">Valeur</h5>
+                          <p class="card-text">Les valeurs que nous prônons sont le travail en équipe, le respect de la diversité, le professionnalisme, et  l’intégrité.
+                        </p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 15rem;">
+                        <div class="card-body">
+                            <img src="images/Vector (4).png" class="bi-eye mission " alt="...">
+                            <div class="bar2"></div>        
+                            <h5 class="card-titl fw-bold ">Cible</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. At lectus nulla suspendisse <br> felis nulla vitae, in et. Pulvinar nec dui sagittis blandit..</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="margebas"></div>
+    </section>
+    <section>
+        <div class="ndparagraph ">
+            <h3>QUELQUES UNES DE NOS ACTIONS</h3>
+            <div class="bar1"></div>
+        </div>
+        <div class="container">
+            <div class="row spacetopcard">
+                <div class="col ">
+                    <div class="card border-0 " style="width: 22rem;">
+                        <img src="images/DS_iPxpVAAArw0z 1.png" class="card-img-top rounded-3" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title font-weigt-bold">Lorem ipsum dolor sit amet, consectetur</h5>
+                          <p class="card-text ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque sed erat sed neque. Diam velit parturient dis et. Nunc lectus mattis proin accumsan. Amet, cras tellus in erat aenean molestie. Arcu at gravida et lorem diam diam..</p>
+                          <a href="#" class="btn btn-bgcol ensavoirplus">En savoir plus</a>
+                        </div>
+                      </div>
+
+                </div>
+                <div class="col">
+                    <div class="card border-0" style="width: 22rem;">
+                        <img src="images/1_jWdX14oeRTvEYAgxsIvLEw 1.png" class="card-img-top rounded-3" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title font-weigt-bold">Lorem ipsum dolor sit amet, consectetur</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque sed erat sed neque. Diam velit parturient dis et. Nunc lectus mattis proin accumsan. Amet, cras tellus in erat aenean molestie. Arcu at gravida et lorem diam diam..</p>
+                          <a href="#" class="btn btn-bgcol ensavoirplus">En savoir plus</a>
+                        </div>
+                      </div>
+
+                </div>
+                <div class="col">
+                    <div class="card border-0  " style="width: 22rem;">
+                        <img src="images/nischay_padbank_jamshedpur_mission_5000_660x330 1.png" class=" rounded-3 card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title font-weigt-bold">Lorem ipsum dolor sit amet, consectetur</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque sed erat sed neque. Diam velit parturient dis et. Nunc lectus mattis proin accumsan. Amet, cras tellus in erat aenean molestie. Arcu at gravida et lorem diam diam..</p>
+                          <a href="#" class="btn btn-bgcol ensavoirplus">En savoir plus</a>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="couleurdefond fourthparagraph">
+        <div class=" ">
+            <h3>NOS PARTENAIRES</h3>
+            <div class="bar1"></div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="images/image 1.png" class="partenaires" alt="">
+
+                </div>
+                <div class="col">
+                    <img src="images/image 2.png" class="partenaires" alt="">
+
+                </div>
+                <div class="col">
+                    <img src="images/image 3.png" class="partenaires" alt="">
+
+                </div>
+                <div class="col">
+                    <img src="images/image 4.png" class="partenaires" alt="">
+                </div>
+            </div>
+        </div>
+        <div>
+            <a href="#" class="btn btn-bgcol ensavoirplus soutient fourthparagraph">Soutenez-nous maintenant</a>
+
+        </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 
