--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a class="nav-link text-white" href="#">Qui aidons-nous?</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled text-white">Blog</a>
+                    <a href="blog.html" class="nav-link text-white" >Blog</a>
                   </li>
                   <li class="nav-item">
                     <button class="btn btn-outline-success couleurbout justify-content-lg-end text-white " type="submit">Soutenez-nous maintenant</button>
@@ -90,7 +90,7 @@
         </div>
         <div class="container">
             <div class="row margecarousel">
-                <div class="col-7">
+                <div class="col-lg-7 col-sm-12">
                     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -119,7 +119,7 @@
                       </div>
 
                 </div>
-                <div class="col-5 justif_txt">
+                <div class="col-lg-4 justif_txt col-sm-12">
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique nulla rhoncus donec eget risus risus pretium. Lorem aliquam massa pellentesque nullam non libero, egestas ante. Vulputate euismod commodo sit nisl, urna orci. In porta tortor massa morbi. Accumsan congue ac leo, fames consectetur lacus, lorem. Magna convallis morbi convallis vivamus sed at. Eros, sagittis tincidunt molestie nec interdum. Aliquet tincidunt aenean nullam eget mattis sit. Morbi pellentesque turpis senectus id suspendisse senectus nam elementum. Nunc, at facilisis scelerisque neque id auctor nunc aliquam. Rhoncus, egestas pellentesque nunc mauris volutpat suspendisse. Quis pretium facilisi enim pellentesque.
                             Condimentum vitae nibh faucibus mi in faucibus lorem sem nulla. Phasellus mi, consectetur dui massa turpis et aliquam egestas. Amet tellus dignissim nam felis. Id arcu eu neque commodo consectetur dolor. At aliquam nullam ultrices at. Pretium sed risus turpis nec purus.
@@ -229,7 +229,7 @@
         </div>
     </section>
     <section class="couleurdefond fourthparagraph">
-        <div class=" ">
+        <div class=" part ">
             <h3>NOS PARTENAIRES</h3>
             <div class="bar1"></div>
         </div>
@@ -253,11 +253,10 @@
             </div>
         </div>
         <div>
-            <a href="#" class="btn btn-bgcol ensavoirplus soutient fourthparagraph">Soutenez-nous maintenant</a>
+            <a href="#" class="btn btn-bgcol ensavoirplus soutient">Soutenez-nous maintenant</a>
 
         </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-
+           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 </body>
 </html>
