--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
         <link href="bootstrap-5.0.0-dist/css/bootstrap.min.css">
         <link href="Style1.css"  rel="stylesheet" >
+        <link rel="stylesheet" href="style.css">
+
         <link rel="stylesheet" href="icofont/icofont.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;1,700&display=swap" rel="stylesheet">
@@ -235,19 +237,19 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col col-sm-3">
                     <img src="images/image 1.png" class="partenaires" alt="">
 
                 </div>
-                <div class="col">
+                <div class="col col-sm-3">
                     <img src="images/image 2.png" class="partenaires" alt="">
 
                 </div>
-                <div class="col">
+                <div class="col col-sm-3">
                     <img src="images/image 3.png" class="partenaires" alt="">
 
                 </div>
-                <div class="col">
+                <div class="col col-sm-3">
                     <img src="images/image 4.png" class="partenaires" alt="">
                 </div>
             </div>
@@ -257,6 +259,65 @@
 
         </div>
     </section>
+  </body>
+  <footer>
+    <div>
+      <div class="serviette ">
+
+        <div class="  text-white  d-flex justify-content-end  me-5">
+            <div class=" my-4">
+
+                 Pour rester informer sur nos ativtés
+                <h3>
+                    Inscrivez-vous à notre <br/> newsletter
+                </h3>
+
+                <form>
+
+                    <input type="text" class="form-control mb-3" placeholder="Nom Prénom" aria-label="Nom Prénom">
+                    <input type="text" class="form-control mb-3" placeholder="Adresse mail" aria-label="Adresse mail">
+                    <input type="text" class="form-control mb-3" placeholder="Vos suggestion" aria-label="Vos suggestion">
+                    <div class="mb-3"></div>
+
+                </form>
+
+                    <a type="submit" class="btn btn-danger ">M'inscrire</a>
+            </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="foot">
+      <div class="row corect">
+        <div class="col-8 offset-1">
+          <h4>Girl Blood World</h4>
+          <p>kaajahkzjlkemazeklmmzalhrkelzfklzekjklkljerh:lkerjzelrkjez,f;<br/>zleizhkr::eezlkjlez!mlkjthezktljzkregtz</p>
+
+          <div class="bar col-2 offset-0 my-4 "></div>
+          <div class="foot1">
+                <h4>Rejoingnez-nous</h4>
+                <div>
+                    <img src="footer/photos/icons8-facebook-entouré-24.png" alt="" class="me-3">
+                    <img src="footer/photos/icons8-twitter-50.png" alt="" width="20" height="20" class="me-3">
+                    <img src="footer/photos/icons8-instagram-50 (1).png" alt=" " width="20" height="20" class="me-3">
+                    <img src="footer/photos/icons8-m-48.png" alt="" width="20" height="20" class="me-3">
+                </div>
+          </div>
+        
+      </div>
+            
+            <div class="col-2 ">
+                        <h3>Navigation</h3>
+                        <a href="quisommesnous"style="color: white">Qui sommes-nous?</a><br/>
+                        <a href="quiaidonsnous"style="color: white">Qui aidons-nous?</a><br/>
+                        <a href="quefaisonnous"style="color: white">Que faisons-nous?</a><br/>
+                        <a href="blog.html"style="color: white">Blog</a>
+
+            </div>
+      </div>
+    </div>
+
+</footer>
            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-</body>
+
 </html>
