--- a/article1.html
+++ b/article1.html
@@ -35,7 +35,7 @@
                     <a class="nav-link active text-white" aria-current="page" href="index.html">Qui sommes-nous?</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="">Que faisons-nous?</a>
+                    <a class="nav-link text-white" href="girl_blood_world/page2.html">Que faisons-nous?</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-white" href="qui aidons nous/aider.html">Qui aidons-nous?</a>
@@ -136,7 +136,7 @@
                       <h3>Navigation</h3>
                       <div class="mb-3 "><a href="index.html" class=" text-white lien1" >Qui sommes-nous?</a> </div>
                       <div class="mb-3 "><a href="aider.html"  class=" text-white lien1 ">Qui aidons-nous?</a> </div>
-                      <div class="mb-3 "><a href="quefaisonnous.html"   class=" text-white lien1 ">Que faisons-nous?</a></div>
+                      <div class="mb-3 "><a href="girl_blood_world/page2.html"   class=" text-white lien1 ">Que faisons-nous?</a></div>
                       <div ><a href="blog.html"   class=" text-white lien1 ">Blog</a></div>
                       
                      
