--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
             </div>
           </nav>
         <div class=" justify-content-center stparagraph">
-            <h2 class="text-white text-center">Lorem ipsum dolor sit amet, consectetur.  </h2>
-            <p class="text-white provide">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Metus pellentesque nascetur turpis mattis </br>
-                volutpat enim et ac. Posuere lacus, massa facilisi quis id laoreet scelerisque etiam. Velit dui, quis</br>
-                 consectetur pretium volutpat nibh sit bibendum.</p>
+            <h2 class="text-white text-center">Bienvenue à Girl Blood World.  </h2>
+            <p class="text-white provide">Girls Blood Worlds  travaille pour l’accès à l’information sur la santé et hygiène menstruelle. Elle permet  à chaque fille d’avoir accès à l’information sur la santé et hygiène menstruelle à travers des sensibilisations, des formations des pairs éducateurs et du renforcement des capacités des acteurs de la société civile pour mieux aborder ces thématiques.</p>
          </div>
     </section>
     <section>
