--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>GBW</title>
 </head>
 <body>
-  <div><a class=" justify-content-center" href="index.html"><img src="images/GBWLogo-02 1.png" alt="" class=" justify-content-center imlog "></a></div>
+  <div><a class="col-2 offset-5 " href="index.html"><img src="images/GBWLogo-02 1.png" alt="" class=" justify-content-center imlog "></a></div>
           </div>
     <section class="entête">
             <nav class="navbar navbar-expand-lg navbar-light bg-dark ">
@@ -46,19 +46,19 @@
             </div>
           </nav>
         <div class=" justify-content-center stparagraph">
-            <h2 class="text-white text-center">Bienvenue à Girl Blood World.  </h2>
-            <p class="text-white provide">Girls Blood Worlds travaille pour l’accès à l’information sur la santé et hygiène menstruelle. Elle permet  à chaque fille d’avoir accès à l’information sur la santé et hygiène menstruelle à travers des sensibilisations, des formations des pairs éducateurs et du renforcement des capacités des acteurs de la société civile pour mieux aborder ces thématiques.</p>
+            <h1 class="text-white text-center">Bienvenue à Girl Blood World.  </h1>
+            <p class="text-white provide col-md-6 offset-3">Girls Blood Worlds travaille pour l’accès à l’information sur la santé et hygiène menstruelle. </p>
          </div>
     </section>
     <section>
         <div class="ndparagraph ">
             <h3>GIRL BLOOD WORLD</h3>
-            <div class="bar1"></div>
+            <div class="bar1 "></div>
 
         </div>
         <div class="container">
             <div class="row margecarousel">
-                <div class="col-lg-7 col-sm-12 mt-lg-2">
+                <div class="col-lg-6 col-sm-12 mt-lg-2">
                     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -85,8 +85,9 @@
                           <span class="visually-hidden">Next</span>
                         </button>
                       </div>
-
                 </div>
+                <div class="col-lg-1"></div>
+
                 <div class="col-lg-5 justif_txt col-sm-12">
                     <div>
                         <p>Selon l’OMS, 500 millions de femmes et de filles subissent une précarité menstruelle due à la pauvreté. N’ayant pas accès aux protections sanitaires (l’eau et d’autres produits de première nécessité), celles-ci sont exclues de leurs quotidiens. Outre le manque d’accès aux produits d’hygiène menstruelle figurent également les perceptions culturelles qui renforcent les inégalités du genre  empêchant les adolescentes de jouir pleinement de leurs droits. En situation de classe, les filles n’ayant pas accès aux produits et aux toilettes adaptés à leurs besoins, se retrouvent dans l’obligation de manquer les cours. 
@@ -101,11 +102,11 @@
     <section class="couleurdefond h-100">
         <div class="rdparagraph ">
             <h3>GIRL BLOOD WORLD A POUR</h3>
-            <div class="bar1"></div>
+            <div class="bar1 "></div>
         </div>
-        <div class="container-fluid ms-5 pb-5  ">
+        <div class="container  pb-5  ">
             <div class="row spacetopcard pb-5">
-                <div class="col ">
+                <div class="col mt-3 ">
                     <div class="card h-100 " style="width: 17rem;">
                         <div class="card-body">
                           <img src="images/gg_eye.png" class="bi-eye mission " alt="...">
@@ -118,7 +119,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col  ">
+                <div class="col mt-3 ">
                     <div class="card h-100" style="width: 17em;">
                         <div class="card-body">
                             <img src="images/Vector (2).png" class="bi-eye mission " alt="...">
@@ -128,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col ">
+                <div class="col mt-3 ">
                     <div class="card h-100" style="width: 17rem;">
                         <div class="card-body">
                             <img src="images/mdi-light_diamond.png" class="bi-eye mission " alt="...">
@@ -141,7 +142,7 @@
                     </div>
 
                 </div>
-                <div class="col ">
+                <div class="col mt-3 ">
                     <div class="card h-100" style="width: 17rem;">
                         <div class="card-body">
                             <img src="images/Vector (4).png" class="bi-eye mission " alt="...">
@@ -161,12 +162,12 @@
     <section>
         <div class="ndparagraph mb-sm-5">
             <h3 class=" "> NOS ACTIONS</h3>
-            <div class="bar1"></div>
+            <div class="bar1 "></div>
         </div>
-        <div class="container-fluid">
-            <div class="row spacetopcard">
-                <div class="col ms-5 px-5 ">
-                    <div class="card border-0 " style="width: 22rem;">
+        <div class="container">
+            <div class="row spacetopcarde ">
+                <div class="col-md-4  ">
+                    <div class="card border-0">
                         <img src="images/unnamed (1).jpg" class="card-img-top rounded-3" alt="...">
                         <div class="card-body">
                           <h5 class="titrecorri font-weigt-bold">Atelier l’ONG Jeunesse Regard et Actions</h5>
@@ -190,8 +191,8 @@
                       </div>
 
                 </div>
-                <div class="col px-1">
-                    <div class="card border-0" style="width: 22rem;">
+                <div class="col-md-4 ">
+                    <div class="card border-0">
                         <img src="images/unnamed.jpg" class="card-img-top rounded-3" alt="...">
                         <div class="card-body">
                           <h5 class="card-title titrecorri font-weigt-bold">Déconstruction des mythes dans les milieux religieux.</h5>
@@ -213,9 +214,9 @@
                       </div>
 
                 </div>
-                <div class="col px-1 py-2">
-                    <div class="card border-0  " style="width: 22rem;">
-                        <img src="images/nischay_padbank_jamshedpur_mission_5000_660x330 1.png" class=" rounded-3 card-img-top" alt="...">
+                <div class="col-md-4 ">
+                    <div class="card border-0 ">
+                        <img src="images/b1dd4f83-4737-42e7-82ef-b10d834935c6.jpg" class=" rounded-3 card-img-top" style="height: 18rem;" alt="...">
                         <div class="card-body">
                           <h5 class="card-title titrecorri font-weigt-bold">GIRL BLOOD WORLD à ENEAM Gbegamey</h5>
                           <div class="accordion accordion-flush but" id="accordionFlushExample">
@@ -238,26 +239,26 @@
             </div>
         </div>
     </section>
-    <section class="couleurdefond fourthparagraph">
+    <section class="couleurdefond1 fourthparagraph">
         <div class=" part ">
             <h3>NOS PARTENAIRES</h3>
-            <div class="bar1"></div>
+            <div class="bar1 "></div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col col-sm-3">
+                <div class="col-md-3">
                     <img src="images/image 1.png" class="partenaires" alt="">
 
                 </div>
-                <div class="col col-sm-3">
+                <div class="col-md-3">
                     <img src="images/image 2.png" class="partenaires" alt="">
 
                 </div>
-                <div class="col col-sm-3">
+                <div class="col-md-3">
                     <img src="images/image 3.png" class="partenaires" alt="">
 
                 </div>
-                <div class="col col-sm-3">
+                <div class="col-md-3">
                     <img src="images/image 4.png" class="partenaires" alt="">
                 </div>
             </div>
@@ -301,7 +302,7 @@
           <div class="d-flex bd-highlight mb-3">
               <div class="me-auto p-2 bd-highlight mx-5">
                  <h4>Girl Blood World</h4>
-                  <p>L'univers des réglés</p>
+                  <p>L'accès à l’information sur la santé et hygiène menstruelle</p>
 
                   <div class="bar col-6 offset-0 my-4 ">
 
@@ -322,7 +323,7 @@
                   <div class="mx-5">   
                       <h3>Navigation</h3>
                       <div class="mb-3 "><a href="index.html" class=" text-white lien1" >Qui sommes-nous?</a> </div>
-                      <div class="mb-3 "><a href="aider.html"  class=" text-white lien1 ">Qui aidons-nous?</a> </div>
+                      <div class="mb-3 "><a href="qui aidons nous/aider.html"  class=" text-white lien1 ">Qui aidons-nous?</a> </div>
                       <div class="mb-3 "><a href="faisons/page2.html"   class=" text-white lien1 ">Que faisons-nous?</a></div>
                       <div ><a href="blog.html"   class=" text-white lien1 ">Blog</a></div>
                       
