--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
                     <a class="nav-link active text-white" aria-current="page" href="index.html">Qui sommes-nous?</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="faisons/page2.html">Que faisons-nous?</a>
+                    <a class="nav-link text-white" href="page2.html">Que faisons-nous?</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-white" href="qui aidons nous/aider.html">Qui aidons-nous?</a>
@@ -106,14 +106,9 @@
                     <span class="card-title art">Article de blog</span></div>
                     <h3 class="partenaire">Quelques conseils pour bien vivre la période de menstruation
                     </h3>
-<<<<<<< HEAD
                     <p class="sit">La menstruation est un phénomène naturel qui fait partie de la vie des femmes, de l’adolescence à la ménopause. ... .</p>
                     <a href="article3.html" class="link-danger lasuite ">Lire plus</a><span><img src="images/Vector (11).png" alt=""></span>
-=======
-                    <p class="sit">La menstruation est un phénomène naturel qui fait partie de la vie des femmes, de l’adolescence à la ménopause. C’est une période que les femmes ont du mal à vivre compte tenu des nombreux .....</p>
-                    <a href="#" class="link-danger lasuite ">Lire plus</a><span><img src="images/" alt=""></span>
->>>>>>> refs/remotes/origin/master
-                  </div>
+                    </div>
                 </div>
               </div>
             </div>
@@ -179,7 +174,7 @@
                             <h3>Navigation</h3>
                             <div class="mb-3 "><a href="index.html" class=" text-white lien1" >Qui sommes-nous?</a> </div>
                             <div class="mb-3 "><a href="qui aidons nous/aider.html"  class=" text-white lien1 ">Qui aidons-nous?</a> </div>
-                            <div class="mb-3 "><a href="faisons/page2.html"   class=" text-white lien1 ">Que faisons-nous?</a></div>
+                            <div class="mb-3 "><a href="page2.html"   class=" text-white lien1 ">Que faisons-nous?</a></div>
                             <div ><a href="blog.html"   class=" text-white lien1 ">Blog</a></div>
                             
                            
