--- a/qui aidons nous/aider.html
+++ b/qui aidons nous/aider.html
@@ -34,7 +34,7 @@
                                 <a class="nav-link active text-white" aria-current="page" href="../index.html">Qui sommes-nous?</a>
                             </li>
                             <li class="nav-item me-5 ms-5">
-                                <a class="nav-link text-white" href="../faisons/page2.html">Que faisons-nous?</a>
+                                <a class="nav-link text-white" href="../page2.html">Que faisons-nous?</a>
                             </li>
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item dropdown ms-5 me-5 ">
@@ -260,7 +260,7 @@
                                 <h3>Navigation</h3>
                                 <div class="mb-3 "><a href="../index.html" class=" text-white lien1" >Qui sommes-nous?</a> </div>
                                 <div class="mb-3 "><a href="aider.html"  class=" text-white lien1 ">Qui aidons-nous?</a> </div>
-                                <div class="mb-3 "><a href="../faisons/page2.html"   class=" text-white lien1 ">Que faisons-nous?</a></div>
+                                <div class="mb-3 "><a href="../page2.html"   class=" text-white lien1 ">Que faisons-nous?</a></div>
                                 <div ><a href="../blog.html"   class=" text-white lien1 ">Blog</a></div>
                                 
                                
