--- a/article4.html
+++ b/article4.html
@@ -35,7 +35,7 @@
                     <a class="nav-link active text-white" aria-current="page" href="index.html">Qui sommes-nous?</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="faisons/page2.html">Que faisons-nous?</a>
+                    <a class="nav-link text-white" href="page2.html">Que faisons-nous?</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-white" href="qui aidons nous/aider.html">Qui aidons-nous?</a>
@@ -141,7 +141,7 @@
                       <h3>Navigation</h3>
                       <div class="mb-3 "><a href="index.html" class=" text-white lien1" >Qui sommes-nous?</a> </div>
                       <div class="mb-3 "><a href="qui aidons nous/aider.html"  class=" text-white lien1 ">Qui aidons-nous?</a> </div>
-                      <div class="mb-3 "><a href="faisons/page2.html"   class=" text-white lien1 ">Que faisons-nous?</a></div>
+                      <div class="mb-3 "><a href="page2.html"   class=" text-white lien1 ">Que faisons-nous?</a></div>
                       <div ><a href="blog.html"   class=" text-white lien1 ">Blog</a></div>
                       
                      
